bug fixes: missing padding etc

--- a/skins/Proto/resources/styles.css
+++ b/skins/Proto/resources/styles.css
@@ -34,7 +34,7 @@ p, ul, pre {line-height:1.5em}
 #hdr-content, #body-content, #ftr-content {margin:0 auto; padding:0 20px}
 #body, #body-content {background:url(shadow.png) repeat-x}
 #body-content {background-color:#fff}
-#body-content {padding-bottom:20px; padding-top:1px; border:solid #ddd; border-width:0 1px 2px; border-radius:0 0 3px 3px}
+#body-content {padding:20px; border:solid #ddd; border-width:0 1px 2px; border-radius:0 0 3px 3px}
 /*#hdr-content, #ftr-content {max-width:1140px}*/
 
 
