--- a/skins/base/base.css
+++ b/skins/base/base.css
@@ -48,7 +48,7 @@ span.highlight {background:#fdef34; border:1px solid #fcef98; padding:1px 3px; b
 
 
 /* Body */
-.bodyHeader {padding:15px 0 12px; border:0; border-bottom:1px solid #ddd; margin-bottom:10px}
+.bodyHeader {padding:0 0 12px; border:0; border-bottom:1px solid #ddd; margin-bottom:10px}
 .bodyHeader.floating {-webkit-box-shadow:0 1px 1px rgba(0, 0, 0, 0.05); box-shadow:0 1px 1px rgba(0, 0, 0, 0.05); background:#fff; margin-left:-20px; margin-right:-20px; padding-left:20px; padding-right:20px}
 
 
@@ -397,7 +397,7 @@ negative margins so they overlap the padding of the <li>. */
 
 
 /* Conversation privacy */
-#conversationPrivacy {float:left; margin:10px 0 40px; line-height:1.5em}
+#conversationPrivacy {float:left; margin:10px 0 20px; line-height:1.5em; overflow:hidden;}
 #control-changeMembersAllowed {font-size:85%; margin-left:5px}
 
 
@@ -415,7 +415,7 @@ a.deleteLink:hover {color:#f00 !important; text-decoration:line-through}
 
 
 /* Conversation body */
-#conversationBody {clear:both}
+#conversationBody {clear:both; margin-top:20px}
 #conversationReply {margin:60px 0 30px; clear:left}
 
 
